# advent-of-code

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: string.h
lib/rlib/: array.c  array.h  file.c  file.h  graph.c  graph.h  hash_table.h  matrix.c  matrix.h  string.c  string.h  tree.c  tree.h
src/2023/01/: main.c
src/2023/02/: main.c
src/2023/03/: main.c  test.txt
src/2023/04/: main.c
src/2023/05/: main.c
src/2023/06/: main.c
src/2023/07/: main.c
src/2023/08/: example_1.txt  example_2.txt  input.txt  main.c
src/2023/09/: main.c
src/2023/10/: main.c
src/2023/11/: main.c
src/2023/12/: example_1.txt  example_2.txt  input.txt  input_1.txt  main.c  nic.txt  run1.txt  run2.txt  run3.txt
src/2023/13/: main.c  test.txt
src/2023/14/: main.c
src/2023/15/: main.c
src/2023/16/: main.c
src/2023/17/: main.c
